<resources>
    <string name="app_name">Цифровой оберег — христианский символ</string>
    <string name="about_amulet">Подробнее об обереге</string>
    <string name="add_amulet">Вы можете добавить оберег (виджет) на домашний экран</string>
    <string name="time">Осталось: 03:00:00</string>
    <string name="power_amulet">Сила оберега</string>
    <string name="active_forever_amulet">Оберег активен навсегда</string>
    <string name="not_active_amulet">Оберег неактивен</string>
    <string name="obereg_desc_1">Активированный оберег создаёт вокруг владельца невидимую защиту, отталкивая всё недоброе</string>
    <string name="main_progress">Ваш прогресс</string>
    <string name="obereg_desc_2">Оберег дарует:</string>
    <string name="obereg_desc_3">• Защиту от сглаза, порчи и зла, направленного извне</string>
    <string name="obereg_desc_4">• Охрану от несчастий и внезапных бед</string>
    <string name="obereg_desc_5">• Усиление внутренней веры и обретение душевного покоя</string>
    <string name="obereg_desc_6">• Поддержку в испытаниях и напоминание о высшей силе, что идёт рядом</string>
    <string name="obereg_desc_7">• Привлечение удачи, благополучия и света в повседневные дела</string>
    <string name="obereg_desc_8">Пока оберег пылает в вашей душе, ни одна тьма не приблизится</string>
    <string name="how_add_widget">Добавить оберег на экран телефона</string>
    <string name="obereg_importent">Оберег, в первую очередь, это символ показывающий принадлежность к христианской вере</string>
    <string name="obereg_widget_information">Поэтому его стоит разместить на видном месте — на домашней странице вашего телефона</string>
    <string name="obereg_widget_connection">О приложении</string>
    <string name="provides_information_button">Подробнее</string>
    <string name="progress_button">Прогресс</string>
    <string name="email">digital.amulet@yandex.ru</string>
    <string name="email_info">Связаться с автором</string>
    <string name="donat">https://boosty.to/digital_amulet/donate</string>
    <string name="donat_info">Поддержать автора</string>
    <string name="settings">Настройки</string>
    <string name="animation_on">"Включить анимацию"</string>
    <string name="animation_off">"Отключить анимацию"</string>
    <string name="copie">"Скопировано"</string>
    <string name="no_internet_connection">Нет подключения к сети. Таблица лидеров недоступна.</string>
    <string name="legal_info">Правовая информация</string>
    <string name="privacy_policy">Политика конфиденциальности</string>
    <string name="terms_of_use">Пользовательское соглашение</string>
    <string name="dont_open_link">Не удалось открыть ссылку</string>
    <string name="politics_url">https://docs.google.com/document/d/e/2PACX-1vT9wPvDVPMprRoKxomQOu7l-mYYi40l0WvpCyQLy9nmTqf4KfXj3h2EJCT5N3QXL1NmLotm2J50ATxO/pub</string>
    <string name="agreement_url">https://docs.google.com/document/d/e/2PACX-1vQEQWLfTFtkXB6UF-NOpJZZVMDJmN9B9vYOvS_AWbOF-MI6F3RPr2lQ3iTH9aCcqIllA59ejFHLmtiu/pub</string>
    <string name="error_obereg_widget">"Ваш экран не поддерживает быстрое добавление виджетов</string>


    <!-- Цитаты -->
    <string name="bonus_stage_1">Ибо возмездие за труд — достойное.\n(1 Тим 5:18)</string>
    <string name="bonus_stage_2">В усердии не ослабевайте; духом пламенейте; Господу служите.\n(Рим 12:11)</string>
    <string name="bonus_stage_3">Бог считает не количество, а любовь, с которой сделано\n(Августин Блаженный.)</string>
    <string name="bonus_stage_4">Ибо мы — соработники у Бога.\n(1 Кор 3:9)</string>
    <string name="bonus_stage_5">Пойдите и научите все народы.\n(Мф 28:19)</string>
    <string name="bonus_stage_6">Не ослабевай, ибо в должное время пожнём, если не ослабеем.\n(Гал 6:9)</string>
    <string name="bonus_stage_7">Будь твёрд и мужествен, не страшись и не ужасайся.\n(Нав 1:9)</string>
    <string name="bonus_stage_8">Что бы вы ни делали, делайте от души, как для Господа\n(Кол 3:23)</string>
    <string name="bonus_stage_9">Посеявший щедро — щедро и пожнёт.\n(Кор 9:6)</string>
    <string name="bonus_stage_10">Дерзай, чадо: вера твоя спасла тебя.\n(Мф 9:22)</string>
    <string name="bonus_stage_11">Будьте тверды, непоколебимы, всегда преуспевайте в деле Господнем.\n(1 Кор 15:58)</string>
    <string name="bonus_stage_12">Щедро дает — и приумножается; кто освежает других — и сам будет освежён.\n.(Притчи 11:25)</string>
    <string name="bonus_stage_13">Все могу в укрепляющем меня Христе.\n(Фил 4:13)</string>
    <string name="bonus_stage_14">Дела твои да будут в Боге.\n(Ин 3:21)</string>
    <string name="bonus_stage_15">Душа ленивого желает, но тщетно; а душа прилежных насытится\n(Притчи 13:4)</string>
    <string name="bonus_stage_16">Верный в малом и в многом верен…\n(Лука 16:10)</string>
    <string name="bonus_stage_17">Всё, что делаете, делайте как для Господа…\n(Кол 3:23)</string>
    <string name="bonus_stage_18">Не бойся, только веруй.\n(Мк 5:36)</string>
    <string name="bonus_stage_19">Свет не прячут — зажги и передай дальше!\n(Мф 5:14–16)</string>
    <string name="bonus_stage_20">Поступайте достойно звания, в которое вы призваны.\n(Еф 4:1)</string>
    <string name="bonus_stage_21">Трудящийся достоин пропитания.\n(1 Тим 5:18)</string>
    <string name="bonus_stage_22">Не утаивай хлеб духовный — подари его ближнему.\n(Притчи 11:26)</string>
    <string name="bonus_stage_23">Малое семя даёт большой плод — поделись им!\n(Марка 4:30–32)</string>
    <string name="bonus_stage_24">Не оставайся один в благодати — пригласи ближнего\n(2 Тимофею 2:2)</string>
    <string name="bonus_stage_25">Будь примером в слове, в житии, в любви, в вере, в чистоте.\n(1 Тим 4:12)</string>
    <string name="bonus_stage_26">Ибо не дал нам Бог духа боязни, но силы, любви и целомудрия.\n(2 Тим 1:7)</string>
    <string name="bonus_stage_27">Подвизайся добрым подвигом веры.\n(1 Тим 6:12)</string>
    <string name="bonus_stage_28">Пребывайте в любви Моей.\n(Ин 15:9)</string>
    <string name="bonus_stage_29">Свет во тьме светит, и тьма не объяла его.\n(Ин 1:5)</string>
    <string name="bonus_stage_30">Ты в трудах не утомился и терпел ради имени Моего.\n(Откр 2:3)</string>

    <string name="obereg_add_1">Как добавить виджет на главный экран:</string>
    <string name="obereg_add_2">1. Нажмите и удерживайте палец на свободной области главного экрана.</string>
    <string name="obereg_add_3">2. В открывшемся меню выберите раздел «Виджеты».</string>
    <string name="obereg_add_4">3. Найдите виджет с названием «Цифровой оберег».</string>
    <string name="obereg_add_5">4. Перетащите его на экран.</string>
    <string name="obereg_add_6">5. Всё! Виджет добавлен на экран</string>


    <!-- Выдвижное меню -->
    <string name="menu_obereg_info">Оберег</string>
    <string name="menu_obereg_progress">Прогресс</string>
    <string name="menu_obereg_settings">Настройки</string>
    <string name="menu_sign_up">Регистрация</string>
    <string name="menu_sign_in">Вход</string>
    <string name="menu_sign_out">Выход</string>
    <string name="open">Вход</string>
    <string name="close">Выход</string>
    <string name="not_reg">Войдите или зарегистрируйтесь!</string>

    <!-- Аккаунт -->
    <string name="email_hint">Email</string>
    <string name="password_hint">Пароль</string>
    <string name="sign_in_action">Войти</string>
    <string name="dialog_reset_email_message">Для восстановления пароля укажите ваш Email адресс</string>
    <string name="sign_up_action">Зарегистрироваться</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="alias_hint">Псевдоним</string>
    <string name="sign_up_error">Не удалось зарегистрироваться</string>
    <string name="sign_in_error">Не удалось войти</string>
    <string name="email_reset_password_was_sent">Вам было отправлено письмо для сброса пароля</string>
    <string name="send_verification_error">Неудалось отправить email для подтверждения!</string>
    <string name="send_verification_done">На вашу почту была отправленна ссылка для подтверждения вашего аккааунта</string>
    <string name="check_email">Пожалуйста, подтвердите вашу почту</string>
    <string name="check_email_gain">Ваш аккаунт не подтвержден. Проверьте почту, чтобы сохранить свой прогресс.</string>
    <string name="reset_password_title">Восстановление пароля</string>
    <string name="restore_password">Восстановить</string>
    <string name="password_confirm_hint">Повторите пароль</string>
    <string name="sign_in_success">Вы вошли в аккаунт</string>
    <string name="delete_account">Удаление аккаунта</string>
    <string name="warning_delete_account">Вы уверены, что хотите удалить свой аккаунт?</string>
    <string name="delete">Удалить</string>
    <string name="cancellation">Отмена</string>
    <string name="enter_password_delete">Введите ваш пароль для удаления аккаунта.</string>
    <string name="confirmation">Подтвердить</string>
    <string name="empty_password">Пароль не может быть пустым</string>
    <string name="could_not_determine_user">"Не удалось определить пользователя"</string>
    <string name="wrong_password">Неверный пароль. Попробуйте еще раз.</string>
    <string name="account_deleted">Аккаунт и все данные успешно удалены</string>
    <string name="account_not_enter">Пользователь не авторизован</string>
    <string name="terms_and_policy_prompt">Я принимаю <a href="https://docs.google.com/document/d/e/2PACX-1vQEQWLfTFtkXB6UF-NOpJZZVMDJmN9B9vYOvS_AWbOF-MI6F3RPr2lQ3iTH9aCcqIllA59ejFHLmtiu/pub">Условия использования</a> и ознакомлен с <a href="https://docs.google.com/document/d/e/2PACX-1vT9wPvDVPMprRoKxomQOu7l-mYYi40l0WvpCyQLy9nmTqf4KfXj3h2EJCT5N3QXL1NmLotm2J50ATxO/pub">Политикой конфиденциальности</a></string>




    <!-- Таблица лидеров -->
    <string name="leaderboard_title">Таблица лидеров (топ-7)</string>
    <string name="my_place_placeholder">Ваше место: —</string>
    <string name="my_alias_placeholder">Псевдоним: —</string>
    <string name="my_score_placeholder">Счёт: —</string>
    <string name="register_to_see">Войдите или зарегистрируйтесь, чтобы сохранить свой прогресс.</string>

    <string name="my_place_fmt">Ваше место: %1$s</string>
    <string name="my_alias_fmt">Псевдоним: %1$s</string>
    <string name="my_score_fmt">Счёт: %1$d</string>
    <string name="leaderboard">Таблица лидеров (топ-7)</string>
    <string name="place">Место: —</string>
    <string name="nickname">Псевдоним: —</string>
    <string name="score">Счёт: —</string>
    <string name="my_score_label">Счёт: —</string>


</resources>